--- a/gradle.properties
+++ b/gradle.properties
@@ -60,6 +60,7 @@ LIB_JPINYIN_VER                         = 1.1.8
 LIB_TIKA_VER                            = 2.3.0
 LIB_UNIREST_VER                         = 3.14.1
 LIB_WEBSOCKET_VER                       = 1.5.6
+LIB_APACHE_ANT_VER                      = 1.10.12
 
 ### Elasticsearch
 LIB_ELASTICSEARCH_VER                   = 8.2.0
